// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`utils > getFolders > should be able to return the correct folders when method options are provided 1`] = `
{
  "actualFolder": "methodActual",
  "baselineFolder": "methodBase",
  "diffFolder": "methodDiff",
}
`;

exports[`utils > getFolders > should be able to return the correct folders when no method options are provided 1`] = `
{
  "actualFolder": "folderActual",
  "baselineFolder": "folderBase",
  "diffFolder": "folderDiff",
}
`;

exports[`utils > getInstanceData > should return correct instance data when JSONWP Mobile capabilities are provided 1`] = `
{
  "appName": "not-known",
  "browserName": "chrome",
  "browserVersion": "not-known",
  "deviceName": "",
  "devicePixelRatio": 1,
  "deviceScreenSize": {
    "height": 0,
    "width": 0,
  },
  "isAndroid": undefined,
  "isIOS": undefined,
  "isMobile": undefined,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "platformname",
  "platformVersion": "not-known",
}
`;

exports[`utils > getInstanceData > should return correct instance data when W3C Mobile capabilities are provided 1`] = `
{
  "appName": "not-known",
  "browserName": "chrome",
  "browserVersion": "not-known",
  "deviceName": "appium:devicename",
  "devicePixelRatio": 1,
  "deviceScreenSize": {
    "height": 0,
    "width": 0,
  },
  "isAndroid": undefined,
  "isIOS": undefined,
  "isMobile": undefined,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": true,
  "platformName": "platformname",
  "platformVersion": "not-known",
}
`;

exports[`utils > getInstanceData > should return instance data when all capabilities are provided 1`] = `
{
  "appName": "not-known",
  "browserName": "chrome",
  "browserVersion": "not-known",
  "deviceName": "",
  "devicePixelRatio": 1,
  "deviceScreenSize": {
    "height": 0,
    "width": 0,
  },
  "isAndroid": undefined,
  "isIOS": undefined,
  "isMobile": undefined,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "platformname",
  "platformVersion": "not-known",
}
`;

exports[`utils > getInstanceData > should return instance data when log name is provided 1`] = `
{
  "appName": "not-known",
  "browserName": "chrome",
  "browserVersion": "not-known",
  "deviceName": "",
  "devicePixelRatio": 1,
  "deviceScreenSize": {
    "height": 0,
    "width": 0,
  },
  "isAndroid": undefined,
  "isIOS": undefined,
  "isMobile": undefined,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "not-known",
}
`;

exports[`utils > getInstanceData > should return instance data when the appium log name is provided 1`] = `
{
  "appName": "not-known",
  "browserName": "chrome",
  "browserVersion": "not-known",
  "deviceName": "",
  "devicePixelRatio": 1,
  "deviceScreenSize": {
    "height": 0,
    "width": 0,
  },
  "isAndroid": undefined,
  "isIOS": undefined,
  "isMobile": undefined,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "not-known",
}
`;

exports[`utils > getInstanceData > should return instance data when the minimum of capabilities is provided 1`] = `
{
  "appName": "not-known",
  "browserName": "chrome",
  "browserVersion": "not-known",
  "deviceName": "",
  "devicePixelRatio": 1,
  "deviceScreenSize": {
    "height": 0,
    "width": 0,
  },
  "isAndroid": undefined,
  "isIOS": undefined,
  "isMobile": undefined,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "not-known",
}
`;

exports[`utils > getInstanceData > should return instance data when the sauce log name is provided 1`] = `
{
  "appName": "not-known",
  "browserName": "chrome",
  "browserVersion": "not-known",
  "deviceName": "",
  "devicePixelRatio": 1,
  "deviceScreenSize": {
    "height": 0,
    "width": 0,
  },
  "isAndroid": undefined,
  "isIOS": undefined,
  "isMobile": undefined,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "not-known",
}
`;

exports[`utils > getInstanceData > should return instance data when wdio-ics option log name is provided 1`] = `
{
  "appName": "not-known",
  "browserName": "chrome",
  "browserVersion": "not-known",
  "deviceName": "",
  "devicePixelRatio": 1,
  "deviceScreenSize": {
    "height": 0,
    "width": 0,
  },
  "isAndroid": undefined,
  "isIOS": undefined,
  "isMobile": undefined,
  "logName": "wdio-ics-logName",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "not-known",
}
`;

exports[`utils > getInstanceData > should return platformName based on the currentCapabilities.platform 1`] = `
{
  "appName": "not-known",
  "browserName": "chrome",
  "browserVersion": "not-known",
  "deviceName": "",
  "devicePixelRatio": 1,
  "deviceScreenSize": {
    "height": 0,
    "width": 0,
  },
  "isAndroid": undefined,
  "isIOS": undefined,
  "isMobile": undefined,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "not-known",
}
`;
